fix dark mode color, add content to ux story

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -10,7 +10,7 @@
 }
 
 .scrolled {
-  background-color: #bcbeff;
+  background-color: #0000ff50;
 }
 
 .isActive {
